SubBt/force-app/main/default/objects/Course__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Construction &amp; Heavy Equipment</fullName>
            </value>
            <value>
                <fullName>General Safety &amp; Manufacturing</fullName>
            </value>
            <value>
                <fullName>Health &amp; Wellness</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>