SubBt/force-app/main/default/objects/Course__c/fields/Certification_Template__c.field-meta.xml
<CustomField>
    <fullName>Certification_Template__c</fullName>
    <label>Certification Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>