SubBt/force-app/main/default/objects/Course__c/fields/Course_Dependency__c.field-meta.xml
<CustomField>
    <fullName>Course_Dependency__c</fullName>
    <label>Course Dependencies</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Concrete and Masonry Safety for Construction</fullName>
            </value>
            <value>
                <fullName>24-Hour EM 385-1-1 Training Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>