SubBt/force-app/main/default/objects/Course__c/fields/Course_Length__c.field-meta.xml
<CustomField>
    <fullName>Course_Length__c</fullName>
    <label>Course Length</label>
    <length>50</length>
    <type>Text</type>
</CustomField>