SubBt/force-app/main/default/objects/Course__c/fields/Course_Length_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Course_Length_Picklist__c</fullName>
    <inlineHelpText>Course Length in Hours.</inlineHelpText>
    <label>Course Length (Hours)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>