SubBt/force-app/main/default/objects/Course__c/fields/Course_Punch_List__c.field-meta.xml
<CustomField>
    <fullName>Course_Punch_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>These are the items that need to be completed for this course.</inlineHelpText>
    <label>Course Punch List</label>
    <referenceTo>Punch_List__c</referenceTo>
    <relationshipLabel>Courses</relationshipLabel>
    <relationshipName>Courses</relationshipName>
    <type>Lookup</type>
</CustomField>