SubBt/force-app/main/default/objects/Course__c/fields/Course_Status__c.field-meta.xml
<CustomField>
    <fullName>Course_Status__c</fullName>
    <label>Course Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>