SubBt/force-app/main/default/objects/Course__c/fields/Course_Version__c.field-meta.xml
<CustomField>
    <fullName>Course_Version__c</fullName>
    <label>Course Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>