SubBt/force-app/main/default/objects/Course__c/fields/Course_Year__c.field-meta.xml
<CustomField>
    <fullName>Course_Year__c</fullName>
    <label>Course Year</label>
    <length>18</length>
    <type>Text</type>
</CustomField>