SubBt/force-app/main/default/objects/Course__c/fields/No_of_Participants__c.field-meta.xml
<CustomField>
    <fullName>No_of_Participants__c</fullName>
    <label>Number of Participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>