SubBt/force-app/main/default/objects/Course__c/fields/Number_Of_Participants_NEW__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Participants_NEW__c</fullName>
    <formula>No_of_Participants__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number Of Participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>