SubBt/force-app/main/default/objects/Course__c/fields/Prep_Day_del__c.field-meta.xml
<CustomField>
    <fullName>Prep_Day_del__c</fullName>
    <inlineHelpText>Day that the preparation needs to occur for the course.</inlineHelpText>
    <label>Preperation Day</label>
    <type>Date</type>
</CustomField>