SubBt/force-app/main/default/objects/Course__c/listViews/Active_Courses.listView-meta.xml
<ListView>
    <fullName>Active_Courses</fullName>
    <columns>Category__c</columns>
    <columns>NAME</columns>
    <columns>Course_Description__c</columns>
    <columns>Course_Version__c</columns>
    <columns>Course_Length__c</columns>
    <columns>Course_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Active Courses</label>
</ListView>